--- a/src/OH.DI.Web/Views/Shared/_Layout.cshtml
+++ b/src/OH.DI.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 </ul>
+                <div class="navbar-right">
+                    <partial name="_LoginPartial" />
+                </div>
             </div>
         </div>
     </div>
