migrate project to digitalcredential

--- a/src/OH.DI.Web/Views/Home/Index.cshtml
+++ b/src/OH.DI.Web/Views/Home/Index.cshtml
@@ -11,6 +11,12 @@
                 <li>Pages using Controllers and Views (in the /Controllers, /ViewModels, and /Views folders - keep /Views/Shared for Razor Pages though)</li>
             </ul>
         </p>
+        <p>
+            <h3>Useful links</h3>
+        <ul>
+            <li><a href="https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=32612">Standard on Identity and Credential Assurance</a></li>
+        </ul>
+        </p>
     </div>
     <div class="col-md-8">
         <h3>APIs</h3>
