--- a/src/OH.DI.Web/Views/Shared/_Layout.cshtml
+++ b/src/OH.DI.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - OH.DI.Web</title>
+    <title>@ViewData["Title"] - OH.DI.Issuer</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">OH.DI.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                    <img src="~/OH-logo.svg" alt="OH Digital Health" typeof="foaf:Image">Digital Health
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -42,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Today.Year - OH.DI.Web</p>
+            <p>&copy; @DateTime.Today.Year - OH.DI.Issuer</p>
         </footer>
     </div>
 
