--- a/src/OH.DI.Web/Pages/LinkmyHealthCard/Index.cshtml
+++ b/src/OH.DI.Web/Pages/LinkmyHealthCard/Index.cshtml
@@ -6,6 +6,6 @@
 
 <form method="post">
     Name:
-    <input asp-for="ProjectId" />
+    <input asp-for="DigitalCredentialId" />
     <input type="submit" />
 </form>
