--- a/src/OH.DI.Web/Views/DigitalCredential/Index.cshtml
+++ b/src/OH.DI.Web/Views/DigitalCredential/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Project Details";
+    ViewData["Title"] = "DigitalCredential Details";
 }
-@model OH.DI.Web.ViewModels.ProjectViewModel
-<h2>Project (MVC View)</h2>
+@model OH.DI.Web.ViewModels.DigitalCredentialViewModel
+<h2>DigitalCredential (MVC View)</h2>
 
 <h3>Name: @Model?.Name</h3>
 
