--- a/src/OH.DI.Web/Views/Home/Index.cshtml
+++ b/src/OH.DI.Web/Views/Home/Index.cshtml
@@ -24,14 +24,14 @@
         <ul>
             <li><a href="/swagger">API Documentation (Swagger)</a></li>
         </ul>
-        <h3>Projects (using Razor Pages)</h3>
+        <h3>DigitalCredentials (using Razor Pages)</h3>
         <ul>
-            <li><a asp-page="/ProjectDetails/Index" asp-route-ProjectId="1">Show Project ID:1 and its To Do Items</a></li>
-            <li><a asp-page="/ProjectDetails/Incomplete">List Incomplete To Do Items</a></li>
+            <li><a asp-page="/DigitalCredentialDetails/Index" asp-route-DigitalCredentialId="1">Show DigitalCredential ID:1 and its To Do Items</a></li>
+            <li><a asp-page="/DigitalCredentialDetails/Incomplete">List Incomplete To Do Items</a></li>
         </ul>
-        <h3>Projects (using MVC Views)</h3>
+        <h3>DigitalCredentials (using MVC Views)</h3>
         <ul>
-            <li><a asp-area="" asp-controller="Project" asp-action="Index" asp-route-projectId="1">Show Project ID:1 and its To Do Items</a></li>
+            <li><a asp-area="" asp-controller="DigitalCredential" asp-action="Index" asp-route-DigitalCredentialId="1">Show DigitalCredential ID:1 and its To Do Items</a></li>
         </ul>
     </div>
 </div>
@@ -48,10 +48,10 @@
                 <li>Pages using Razor Pages (in the /Pages folder and /Views/Shared folder)</li>
                 <li>Pages using Controllers and Views (in the /Controllers, /ViewModels, and /Views folders - keep /Views/Shared for Razor Pages though)</li>
             </ul>
-            Choose which features you will use for your project and delete the ones you will not use.
+            Choose which features you will use for your DigitalCredential and delete the ones you will not use.
         </p>
         <p>
-            Provide feedback and report issues in the <a href="https://github.com/ardalis/CleanArchitecture">project's GitHub repository</a>; ask questions using the <a href="https://stackoverflow.com/questions/tagged/ardalis-cleanarchitecture?tab=Newest">ardalis-cleanarchitecture tag on StackOverflow</a>.
+            Provide feedback and report issues in the <a href="https://github.com/ardalis/CleanArchitecture">DigitalCredential's GitHub repository</a>; ask questions using the <a href="https://stackoverflow.com/questions/tagged/ardalis-cleanarchitecture?tab=Newest">ardalis-cleanarchitecture tag on StackOverflow</a>.
         </p>
     </div>
     <div class="col-md-4">
@@ -60,14 +60,14 @@
         <ul>
             <li><a href="/swagger">API Documentation (Swagger)</a></li>
         </ul>
-        <h3>Projects (using Razor Pages)</h3>
+        <h3>DigitalCredentials (using Razor Pages)</h3>
         <ul>
-            <li><a asp-page="/ProjectDetails/Index" asp-route-ProjectId="1">Show Project ID:1 and its To Do Items</a></li>
-            <li><a asp-page="/ProjectDetails/Incomplete">List Incomplete To Do Items</a></li>
+            <li><a asp-page="/DigitalCredentialDetails/Index" asp-route-DigitalCredentialId="1">Show DigitalCredential ID:1 and its To Do Items</a></li>
+            <li><a asp-page="/DigitalCredentialDetails/Incomplete">List Incomplete To Do Items</a></li>
         </ul>
-        <h3>Projects (using MVC Views)</h3>
+        <h3>DigitalCredentials (using MVC Views)</h3>
         <ul>
-            <li><a asp-area="" asp-controller="Project" asp-action="Index" asp-route-projectId="1">Show Project ID:1 and its To Do Items</a></li>
+            <li><a asp-area="" asp-controller="DigitalCredential" asp-action="Index" asp-route-DigitalCredentialId="1">Show DigitalCredential ID:1 and its To Do Items</a></li>
         </ul>
     </div>
     <div class="col-md-4">
