migrate ToDoItem to AssuredClaim

--- a/src/OH.DI.Web/Pages/DigitalCredentialDetails/Incomplete.cshtml
+++ b/src/OH.DI.Web/Pages/DigitalCredentialDetails/Incomplete.cshtml
@@ -8,7 +8,7 @@
         @foreach (var item in Model.ToDoItems)
         {
             <li>
-                @item.Title
+                @item.Name
                 @if (item.IsDone)
                 {
                     <span>DONE!</span>
